--- a/style.css
+++ b/style.css
@@ -23,13 +23,20 @@ html, body {
 }
 
 #title {
-    font-size: 60px;
+    font-size: 36px;
     text-align: center;
 }
 
-#instructions {
+#artist {
     font-size: 16px;
+    text-align: center;
+    padding: 12px;
+}
+
+#instructions {
+    font-size: 14px;
     text-align: justify;
+    padding-top: 12px;
 }
 
 .button-container {
