--- a/style.css
+++ b/style.css
@@ -1,52 +1,128 @@
-html {
-    box-sizing: border-box;
-}
-
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-html, body {
-    height: 100%;
-    background-color: #181818;
+body {
+    background-color: #111111;
     color: white;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#container {
+    letter-spacing: 3px;
+  }
+  
+  #demos {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 48px;
-    padding-left: 48px;
-    padding-right: 48px;
-}
-
-#title {
-    font-size: 36px;
-    text-align: center;
-}
-
-#artist {
-    font-size: 16px;
-    text-align: center;
-    padding: 12px;
-}
-
-#instructions {
-    font-size: 14px;
-    text-align: justify;
-    padding-top: 12px;
-}
-
-.button-container {
-    padding-top: 48px;
-}
-
-.link-button {
+  }
+  
+  .demo {
+    width: 75%;
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #080808;
+  }
+  
+  h3 {
     font-size: 48px;
+    margin-bottom: 32px;
+  }
+  
+  h5 {
+    font-size: 32px;
+    margin-top: 16px;
+    margin-bottom: 32px;
+  }
+  
+  .img-container {
+    width: 100%;
+    max-height: 300px;
+  }
+  .img-container img {
+    display: block;
+    margin: auto;
+    height: auto;
+    width: auto;
+    max-height: 300px;
+    max-width: 50%;
+  }
+  
+  .link-container {
+    margin-top: 32px;
+    margin-bottom: 48px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .link {
+    width: 35%;
+    text-align: center;
+    font-size: 32px;
     color: white;
-    background-color: #363636;
-    padding: 15px 25px;
     text-decoration: none;
-}
+  }
+  
+  #gridcont {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas: ". mid right";
+    background: #080808;
+  
+  }
+  
+  .mid {
+    grid-area: mid;
+    font-size: 48px;
+    padding: 24px 0 24px 0;
+    text-align: center;
+  }
+  
+  .right {
+    grid-area: right;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .logout {
+    font-size: 24px;
+    color: white;
+    background-color: black;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  /* V2 */
+  
+  
+  .aaa {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 48px;
+    width: 100%;
+  }
+  
+  .ccc {
+    width: 300px;
+    height: 300px;
+  }
+  
+  .ddd {
+    height: 300px;
+    width: 600px;
+  }
+  
+  .zzz {
+    text-align: center;
+    font-size: 32px;
+  }
+  
+  .hide {
+    display: none !important;
+  }
