--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
   }
   
   .demo {
@@ -20,28 +19,22 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #080808;
-    height: 100%;
   }
   
   h3 {
-    font-size: 48px;
+    font-size: 54px;
     margin-bottom: 12px;
     text-align: center;
   }
-  
-  h5 {
-    font-size: 32px;
-    margin-top: 16px;
-    margin-bottom: 32px;
-  }
 
   h6 {
-    font-size: 18px;
+    font-size: 24px;
     text-align: center;
     margin: 0;
     margin-bottom: 32px;
     letter-spacing: 2px;
     max-width: 75%;
+    color: #acacac;
   }
   
   .img-container {
